<resources>
    <string name="app_name">Roxy</string>
    <string name="facebook_app_id">967876093670089</string>
    <string name="fb_login_protocol_scheme">fb967876093670089</string>
    <string name="default_notification_channel_id">roxy</string>
    <string name="str_login_hint_email">Enter your email</string>
    <string name="str_login_hint_password">Enter your password</string>
    <string name="str_login_btn">Login</string>
    <string name="str_login_terms">By clicking below you are agree to our terms and service</string>
    <string name="str_register_hint_display_name">Enter your display name</string>
    <string name="str_register_btn">Register</string>
    <string name="str_register_already">Already have an account on Roxy? Login here</string>
    <string name="str_verification_page1">Team Roxy will verify you. You need to provide us with your proper photo.</string>
    <string name="str_verification_btn_photo">Take a Photo</string>
    <string name="str_verification_btn_gallery">Take From Gallery</string>
    <string name="str_verification_upload">Upload</string>
    <string name="str_verification_encourage">Team Roxy encourages you to take a photo like this one</string>
    <string name="str_block_soon">Team Roxy will verify you soon. Till then stay tuned!</string>
    <string name="str_likes_placeholder_heading">No Likes Just Yet!</string>
    <string name="str_likes_placeholder_summary">Boost your visibility with Roxy Gold</string>
    <string name="str_like_btn_gold">Get Roxy Gold</string>
    <string name="str_profile_btn_gold">Get Roxy Gold</string>
    <string name="new_connection">new connection</string>
    <string name="opponent_pending">Pending</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212;
        %2$s alphanumeric Latin characters without spaces, the first char must be a letter</string>
    <string name="field_name_user_login">User name</string>
    <string name="field_name_user_fullname">User Full Name</string>
    <string name="splash_app_version">v %s</string>
    <string name="hint_user_full_name">User full name</string>
    <string name="title_login_activity">Enter to chat</string>
    <string name="text_welcoming_message">Please enter username and chat room name. \nYou can join existed chat room.</string>
    <string name="hint_user_login">User login</string>
    <string name="text_select_dialog_to_join">Select dialog you want to join</string>
    <string name="loading_users_error">Loading users error. Error</string>
    <string name="removeDataError">Logout error</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="text_select_users_to_call">Select users you want to call</string>
    <string name="title_one_user_selected">%s user selected</string>
    <string name="tile_many_users_selected">%s users selected</string>
    <string name="menu_refresh_users">Refresh</string>
    <string name="menu_select_people_done">Done</string>
    <string name="placeholder_username_you">%s (you)</string>
    <string name="select_users_choose_users">Please, choose at least one participant</string>
    <string name="title_video_category">Video</string>
    <string name="title_call_settings_category">Call Settings</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration</string>
    <string name="pref_disable_built_in_aec_dlg">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_title">Disable built-in AEC</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video Format</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution</string>
    <string name="pref_resolution_default">-1</string>
    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Bandwidth (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <string name="pref_frame_rate_key">frame_rate</string>
    <string name="pref_frame_rate_title">Frame Rate (0&#8211;30)</string>
    <string name="pref_frame_rate_default">0</string>
    <string name="pref_audiocodec_key">pref_audio_codec</string>
    <string name="pref_audiocodec_title">Default audio codec</string>
    <string name="pref_audiocodec_def">ISAC</string>
    <string name="pref_audiocodec_dlg">Select default audio codec</string>
    <string name="pref_videocodec_default">0</string>
    <string name="pref_videocodec_dlg">Select default video codec</string>
    <string name="pref_videocodec_title">Default video codec</string>
    <string name="packet_failed">Packet loss occurs</string>
    <string name="text_push_notification_message">"%s is calling you"</string>
    <string name="in_conference">In Conference</string>
    <string name="text_local_name">Me</string>
    <string name="camera_swicth_failed">\"Failed switch camera\"</string>
    <string name="opponents">and %s other</string>
    <string name="text_status_closed">Closed</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="dlg_creating_new_user">Creating new user…</string>
    <string name="dlg_loading_dialogs_users">Loading dialogs and users…</string>
    <string name="dlg_retry">Retry</string>
    <string name="dlg_updating_dialog">Updating dialog…</string>
    <string name="dlg_create_dialog">Creating dialog…</string>
    <string name="dlg_loading_opponents">Loading opponents…</string>
    <string name="dlg_signal_error">Disconnected… Please check your Internet connection!</string>
    <string name="dlg_login_error">The user does not logged</string>
    <string name="dlg_allow">Allow</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="login_chat_retry">Trying Relogin. Please wait a moment</string>
    <string name="action_start_login">Done</string>
    <string name="action_leave_dialog">Leave Dialog</string>
    <string name="action_start_video_call">Video call</string>
    <string name="action_start_audio_call">Audio call</string>
    <string name="action_start_broadcast_call">Join to broadcast</string>
    <string name="action_update_opponens_list">Update opponents list</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_screen_share">Screen share</string>
    <string name="action_dialogs_app_info">App Info</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="title_one_dialog_selected">%s dialog selected</string>
    <string name="tile_many_dialogs_selected">%s dialogs selected</string>
    <string name="pref_manage_speakerphone_by_proximity_key">manage_speakerphone_by_proximity_preference</string>
    <string name="pref_manage_speakerphone_by_proximity_default">false</string>
    <string name="pref_answer_time_interval_key">answer_time_interval</string>
    <string name="pref_answer_time_interval_default_value">60</string>
    <string name="pref_disconnect_time_interval_key">disconnect_time_interval</string>
    <string name="pref_disconnect_time_interval_default_value">10</string>
    <string name="pref_dialing_time_interval_key">Dialing_time_interval</string>
    <string name="pref_dialing_time_interval_default_value">5</string>
    <string name="also_on_call">Also on call:</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="connection_was_lost">Connection was lost</string>
    <string name="opponent">and %s </string>
    <string name="accepted">Accepted</string>
    <string name="stop_share">Stop</string>
    <string name="appinfo_application_version">Application version:</string>
    <string name="appinfo_qbsdk_version">QuickBlox SDK version:</string>
    <string name="appinfo_application_id">Application ID:</string>
    <string name="appinfo_authorization_key">Authorization key:</string>
    <string name="appinfo_authorization_secret">Authorization secret:</string>
    <string name="appinfo_account_key">Account key:</string>
    <string name="appinfo_api_domain">API domain:</string>
    <string name="appinfo_chat_domain">Chat domain:</string>
    <string name="appinfo_title">App Info</string>
    <string name="appinfo_qa_verion">QA version:</string>
    <string name="notification_title">You have an active call</string>
    <string name="notification_text">Touch takes you back to the call %1$s</string>
    <string name="error_qb_credentials_empty">Credentials are wrong or empty. You have to set:
        Application ID, Authentification Key, Authentification Secret, Account Key in constants in App.java
        and you have to set Sender ID in the string resources to launch application.
        If you haven\'t them you can register new account and application at https://admin.quickblox.com
        then put Application credentials from Overview page + Account key from https://admin.quickblox.com/account/settings</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error">Error SignIn user, please try again</string>
    <string name="update_user_error">Error updating User, please try again</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="dlg_error">Error</string>
    <string name="dlg_error_loading">Loading dialog error. Error</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="join_conference">Join to conference…</string>
    <string name="join_conference_error">Join to conference errors</string>
    <string name="error_connection">Connection failed. Please check your internet connection.</string>
    <string name="error_response_timeout">No response received within reply timeout</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string name="error_permission_video">You should allow Camera permission</string>
    <string name="error_permission_audio">You should allow Microphone permission</string>
</resources>